[gd_scene load_steps=4 format=3 uid="uid://c5qc6bmfbgi4h"]

[ext_resource type="Script" path="res://addons/inventory-system/editor/recipes/recipe_editor.gd" id="1_lv37o"]

[sub_resource type="Image" id="Image_idyir"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 93, 93, 55, 255, 97, 97, 58, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 98, 98, 47, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 94, 94, 46, 255, 93, 93, 236, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_ofl6u"]
image = SubResource("Image_idyir")

[node name="RecipeEditor" type="Control"]
custom_minimum_size = Vector2(0, 384)
layout_mode = 3
anchors_preset = 0
offset_bottom = 384.0
size_flags_horizontal = 3
script = ExtResource("1_lv37o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="RecipeResource" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/RecipeResource"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Recipe Resource"

[node name="RecipeResourceLineEdit" type="LineEdit" parent="MarginContainer/MarginContainer/VBoxContainer/RecipeResource"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Place Item Resource Path Here"
editable = false

[node name="RecipeResourceEditButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/RecipeResource"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Open Icon Texture2D"
icon = SubResource("ImageTexture_ofl6u")
flat = true
icon_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Products" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/Products"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Products"

[node name="ProductsVBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/Products"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="NewProductButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/Products/ProductsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Add New Product"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Ingredients" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/Ingredients"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Ingredients"

[node name="IngredientsVBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/Ingredients"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="NewIngredientButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/Ingredients/IngredientsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Add New Ingredient"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExtraRequiredItems" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/ExtraRequiredItems"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Required Items"

[node name="RequiredItemsVBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/ExtraRequiredItems"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="NewRequiredItemButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/ExtraRequiredItems/RequiredItemsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Add Required Item (Items not used by craft)"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TimeToCraft" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/TimeToCraft"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Time To Craft"

[node name="TimeToCraftSpinBox" type="SpinBox" parent="MarginContainer/MarginContainer/VBoxContainer/TimeToCraft"]
layout_mode = 2
max_value = 1e+08

[node name="CraftStationType" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/CraftStationType"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Craft Station Type"

[node name="CraftStationTypeOptionButton" type="OptionButton" parent="MarginContainer/MarginContainer/VBoxContainer/CraftStationType"]
layout_mode = 2
size_flags_horizontal = 3
expand_icon = true

[node name="Control" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemResourceFileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(326, 162)
ok_button_text = "Abrir"
file_mode = 0
filters = PackedStringArray("*.tres ; Recipe")

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Products/ProductsVBoxContainer/NewProductButton" to="." method="_on_new_product_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Ingredients/IngredientsVBoxContainer/NewIngredientButton" to="." method="_on_new_ingredient_button_pressed"]
